testdata/result/ddl/!bad_create_table_with_hint.sql.txt
--- !bad_create_table_with_hint.sql
@{unknown_hint=1}
create table tbl(pk int64 primary key)
--- Error
syntax error: testdata/input/ddl/!bad_create_table_with_hint.sql:1:1: expected token: CREATE, <ident>, but: @
  1|  @{unknown_hint=1}
   |  ^


--- AST
&ast.BadDDL{
  BadNode: &ast.BadNode{
    NodeEnd: 56,
    Tokens:  []*token.Token{
      &token.Token{
        Kind: "@",
        Raw:  "@",
        End:  1,
      },
      &token.Token{
        Kind: "{",
        Raw:  "{",
        Pos:  1,
        End:  2,
      },
      &token.Token{
        Kind:     "<ident>",
        Raw:      "unknown_hint",
        AsString: "unknown_hint",
        Pos:      2,
        End:      14,
      },
      &token.Token{
        Kind: "=",
        Raw:  "=",
        Pos:  14,
        End:  15,
      },
      &token.Token{
        Kind: "<int>",
        Raw:  "1",
        Base: 10,
        Pos:  15,
        End:  16,
      },
      &token.Token{
        Kind: "}",
        Raw:  "}",
        Pos:  16,
        End:  17,
      },
      &token.Token{
        Kind:  "CREATE",
        Space: "\n",
        Raw:   "create",
        Pos:   18,
        End:   24,
      },
      &token.Token{
        Kind:     "<ident>",
        Space:    " ",
        Raw:      "table",
        AsString: "table",
        Pos:      25,
        End:      30,
      },
      &token.Token{
        Kind:     "<ident>",
        Space:    " ",
        Raw:      "tbl",
        AsString: "tbl",
        Pos:      31,
        End:      34,
      },
      &token.Token{
        Kind: "(",
        Raw:  "(",
        Pos:  34,
        End:  35,
      },
      &token.Token{
        Kind:     "<ident>",
        Raw:      "pk",
        AsString: "pk",
        Pos:      35,
        End:      37,
      },
      &token.Token{
        Kind:     "<ident>",
        Space:    " ",
        Raw:      "int64",
        AsString: "int64",
        Pos:      38,
        End:      43,
      },
      &token.Token{
        Kind:     "<ident>",
        Space:    " ",
        Raw:      "primary",
        AsString: "primary",
        Pos:      44,
        End:      51,
      },
      &token.Token{
        Kind:     "<ident>",
        Space:    " ",
        Raw:      "key",
        AsString: "key",
        Pos:      52,
        End:      55,
      },
      &token.Token{
        Kind: ")",
        Raw:  ")",
        Pos:  55,
        End:  56,
      },
    },
  },
}

--- SQL
@{unknown_hint=1} create table tbl(pk int64 primary key)
